Fixed broken instagram link

--- a/css/main.css
+++ b/css/main.css
@@ -874,7 +874,7 @@
   .footer-list-second{
     margin-bottom: 1rem;
     list-style: none;
-    margin-left: -5.3rem;
+    margin-left: -5.9rem;
   }
   
   .footer-link-first:link {
